[package]
name = "comtesse"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "graph utilities"
homepage = "https://github.com/HiddyTiddy/comtesse"
repository = "https://github.com/HiddyTiddy/comtesse"
readme = "README.md"
categories = ["graph"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
